--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react-hook-form": "^7.39.5",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.6.0",
+    "react-photo-view": "^1.2.6",
+    "react-responsive-modal": "^6.4.2",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "sweetalert2": "^11.12.0",
